Fix hero section z-index bug

--- a/src/App.css
+++ b/src/App.css
@@ -245,6 +245,7 @@ ul.nav-links li a.active
         max-height: 59px;
         overflow: hidden;
         transition: max-height 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
+        z-index: 2;
     }
 
     #topmenu.open
